--- a/src/styles/register-layout.css
+++ b/src/styles/register-layout.css
@@ -67,5 +67,8 @@
   width: 100%;
   font-weight: bold;
   margin-top: 10px;
-  border: 2px solid #DFA801;
+}
+
+.register-layout button:hover {
+  background-color: #cc8b01;
 }
